// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content Pagelet Mapper should convert pagelet with slots and additional pagelets to multi array instance 1`] = `
[
  {
    "configurationParameters": {
      "key": "test",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "pagelet",
    "domain": "domain",
    "id": "pagelet",
    "slots": [
      {
        "configurationParameters": {},
        "definitionQualifiedName": "quali-slot",
        "displayName": "slot1",
        "pageletIDs": [
          "pagelet-nested#0$0@pagelet",
        ],
      },
      {
        "configurationParameters": {
          "key1": "hallo",
          "key2": [
            "hallo",
            "welt",
          ],
        },
        "definitionQualifiedName": "quali-slot",
        "displayName": "slot2",
        "pageletIDs": [
          "pagelet-nested2#0$1@pagelet",
        ],
      },
    ],
  },
  {
    "configurationParameters": {},
    "definitionQualifiedName": "fq",
    "displayName": "name-nested",
    "domain": "domain",
    "id": "pagelet-nested#0$0@pagelet",
    "slots": [],
  },
  {
    "configurationParameters": {
      "key1": "test-key1",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "name1",
    "domain": "domain",
    "id": "pagelet-nested2#0$1@pagelet",
    "slots": [
      {
        "configurationParameters": {},
        "definitionQualifiedName": "fq-2",
        "displayName": "slot11",
        "pageletIDs": [
          "pagelet-deeply-nested#0$0@pagelet-nested2#0$1@pagelet",
        ],
      },
    ],
  },
  {
    "configurationParameters": {
      "key3": "1",
    },
    "definitionQualifiedName": "fq",
    "displayName": "name-nested",
    "domain": "domain",
    "id": "pagelet-deeply-nested#0$0@pagelet-nested2#0$1@pagelet",
    "slots": [],
  },
]
`;

exports[`Content Pagelet Mapper should convert pagelet with slots to single array instance 1`] = `
[
  {
    "configurationParameters": {
      "key": "test",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "pagelet",
    "domain": "domain",
    "id": "pagelet",
    "slots": [
      {
        "configurationParameters": {},
        "definitionQualifiedName": "quali-slot",
        "displayName": "Slot",
        "pageletIDs": [],
      },
    ],
  },
]
`;

exports[`Content Pagelet Mapper should convert simple pagelet to single array instance 1`] = `
[
  {
    "configurationParameters": {
      "key": "test",
    },
    "definitionQualifiedName": "domain-pagelet",
    "displayName": "pagelet",
    "domain": "domain",
    "id": "pagelet",
    "slots": [],
  },
]
`;
